# RAMROS

./: ..gitignore.swp  README.md  linux_launch_script.sh  setup.md
RAM_temp_control/: CMakeLists.txt  package.xml
RAM_temp_control/src/temp_read/: temp_read.ino
RAM_temp_control/src/temp_read_accurate/: temp_read_accurate.ino
ur3_planner/: CMakeLists.txt  package.xml
ur3_planner/src/: basic.py  line.cpp  line.py
ur_description/: CMakeLists.txt
ur_gazebo/: CMakeLists.txt
